--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,27 @@
-# Python libraries needed for this Flask app to run
-# Use 'pip install -r requirements.txt' to install
-
-flask
-flask_sqlalchemy
-flask_restful
-flask_httpauth
-psycopg2-binary
-pytest
-python-decouple
+aniso8601==9.0.1
+atomicwrites==1.4.0
+attrs==21.4.0
+click==8.0.4
+colorama==0.4.4
+Flask==2.0.3
+Flask-HTTPAuth==4.5.0
+Flask-RESTful==0.3.9
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
 gunicorn==20.1.0
+iniconfig==1.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.0
+MarkupSafe==2.1.1
+packaging==21.3
+pluggy==1.0.0
+psycopg2-binary==2.9.3
+py==1.11.0
+pyparsing==3.0.7
+pytest==7.1.1
+python-decouple==3.6
+pytz==2022.1
+six==1.16.0
+SQLAlchemy==1.3.23
+tomli==2.0.1
+Werkzeug==2.0.3
